# comflowy-nodes

./: .gitignore  README.md  README_CN.md  __init__.py  makefile  nodes_test.py  pyproject.toml
flowy/: api_key_manager.py  nodes.py  nodes_clarityupscale.py  nodes_flux.py  nodes_http.py  nodes_ideogram.py  nodes_json.py  nodes_llm.py  nodes_omost.py  nodes_previewvideo.py  nodes_upscale.py  types.py  utils.py
flowy/api_nodes/: __init__.py  base.py  clarityupscaler.py  flux.py  fluxdevlora.py  fluxultra.py  hailuo.py  ideogram.py  keling.py  luma.py  recraft.py
flowy/api_nodes/replicate/: __init__.py  replicate_bridge.py  schema_to_node.py  supported_models.json
flowy/api_nodes/replicate/schemas/: falcons-ai_nsfw_image_detection.json  jingyunliang_swinir.json  lucataco_llama-3-vision-alpha.json  meta_meta-llama-3.1-405b-instruct.json  okaris_omni-zero-couples.json  okaris_omni-zero.json  tencentarc_photomaker-style.json  tencentarc_photomaker.json  xiankgx_face-swap.json
flowy/lib_omost/: canvas.py
web/js/: previewVideo.js
workflows/: LLM_CN.json  Omost_LLM.json
