[project]
name = "comflowy-nodes"
description = "Custom nodes for ComfyUI by Comflowy."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/6174/comflowy-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comflowy-nodes"
Icon = ""
